--- a/_config.yml
+++ b/_config.yml
@@ -88,8 +88,8 @@ toc:
 ## => Markdown Enhancements
 ##############################
 ## Mathjax
-mathjax: # false (default), true
-mathjax_autoNumber: # false (default), true
+mathjax: true
+mathjax_autoNumber: true
 
 ## Mermaid
 mermaid: # false (default), true
